@startuml

class Personnage{

    - x : int
    - y : int

    + Personnage(int x, int y)
    + getPosition() : int[]
    + setPosition()
    + seDeplacer()
}

class Labyrinthe {
    - largeur : int
    - hauteur : int
    - mur boolean[][]

    + Labyrinthe(int x, int y)
    {static} + chargerFichier(String chemin): Labyrinthe
    + etreLimite(int x, int y)
    + etreMur(int x, int y)
    + getLargeur()
    + getHauteur()
    + etreCaseFin(int x, int y):boolean
}
class JeuZeldiablo{

    + jeuZeldiablo()
    + evoluer(Commande c, Labyrinthe l)
    + etreFini() : boolean
    + getLabyrinthe() : Labyrinthe
    + getEnnemie () : Ennemie
}

class Ennemie{
    - x : int
    - y : int
    - xFin : int
    - yFin : int
    - allerRetour : boolean


    + Ennemie(int x, int y, int xf,int yf, int xd, int yd)
    + seDeplacerH()
    + seDeplacerV()
    + finPaterne() : boolean
    + reset() :

}

JeuZeldiablo"1" --> "*" Ennemie : - ennemieV
JeuZeldiablo"1" --> "*" Ennemie : - ennemieH
JeuZeldiablo"1" -> "1" Personnage : - perso
JeuZeldiablo"1" --> "*" Ennemie : - ennemie
JeuZeldiablo"1" -> "1" Labyrinthe : - l
Personnage"1 " ->  "1" Ennemie

@enduml